--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
         "react-select": "5.10.0",
         "react-slider": "2.0.6",
         "react-spinners": "0.15.0",
+        "rehype-raw": "^7.0.0",
         "remark-gfm": "4.0.1",
         "sass": "1.86.0",
         "sass-loader": "16.0.4",
