fix(agreements): update amounts and statuses for agreement entries in JSON data

--- a/backend/data_tools/data/agreements_and_blin_data.json5
+++ b/backend/data_tools/data/agreements_and_blin_data.json5
@@ -453,9 +453,8 @@
       can_id: 502,
       created_by: 503,
       agreement_id: 9,
-      amount: 700000.0,
-      status: "PLANNED",
-      date_needed: "2043-06-13T14:03:25.765487",
+      amount: 41525.0,
+      status: "DRAFT",
       proc_shop_fee_percentage: 0.005,
       services_component_id: 6,
       on_hold: false,
@@ -16668,9 +16667,8 @@
       can_id: 502,
       created_by: 503,
       agreement_id: 2,
-      amount: 2000000.0,
-      status: "IN_EXECUTION",
-      date_needed: "2043-06-13T14:03:25.765487",
+      amount: 41525.0,
+      status: "DRAFT",
       on_hold: false,
       certified: false,
       closed: false,
@@ -16752,9 +16750,8 @@
       can_id: 502,
       created_by: 503,
       agreement_id: 2,
-      amount: 7000000.0,
-      status: "PLANNED",
-      date_needed: "2043-06-13T14:03:25.765487",
+      amount: 41525.0,
+      status: "DRAFT",
       on_hold: false,
       certified: false,
       closed: false,
