test: undo bli data edits, create new blis for fix

--- a/backend/data_tools/data/agreements_and_blin_data.json5
+++ b/backend/data_tools/data/agreements_and_blin_data.json5
@@ -453,8 +453,9 @@
       can_id: 502,
       created_by: 503,
       agreement_id: 9,
-      amount: 41525.0,
-      status: "DRAFT",
+      amount: 700000.0,
+      status: "PLANNED",
+      date_needed: "2043-06-13T14:03:25.765487",
       proc_shop_fee_percentage: 0.005,
       services_component_id: 6,
       on_hold: false,
@@ -16667,8 +16668,9 @@
       can_id: 502,
       created_by: 503,
       agreement_id: 2,
-      amount: 41525.0,
-      status: "DRAFT",
+      amount: 2000000.0,
+      status: "IN_EXECUTION",
+      date_needed: "2043-06-13T14:03:25.765487",
       on_hold: false,
       certified: false,
       closed: false,
@@ -16750,8 +16752,62 @@
       can_id: 502,
       created_by: 503,
       agreement_id: 2,
-      amount: 41525.0,
+      amount: 7000000.0,
+      status: "PLANNED",
+      date_needed: "2043-06-13T14:03:25.765487",
+      on_hold: false,
+      certified: false,
+      closed: false,
+    },
+    {
+      "budget_line_item_type": "CONTRACT",
+      line_description: "BLI with no date needed #1",
+      comments: "",
+      can_id: 520,
+      created_by: 503,
+      agreement_id: 6,
+      amount: 4162025.1,
       status: "DRAFT",
+      on_hold: false,
+      certified: false,
+      closed: false,
+    },
+    {
+      "budget_line_item_type": "CONTRACT",
+      line_description: "BLI with no date needed #2",
+      comments: "",
+      can_id: 520,
+      created_by: 503,
+      agreement_id: 6,
+      amount: 4162025.2,
+      status: "DRAFT",
+      on_hold: false,
+      certified: false,
+      closed: false,
+    },
+    {
+      "budget_line_item_type": "CONTRACT",
+      line_description: "BLI with no date needed #3",
+      comments: "",
+      can_id: 520,
+      created_by: 503,
+      agreement_id: 6,
+      amount: 4162025.3,
+      status: "DRAFT",
+      on_hold: false,
+      certified: false,
+      closed: false,
+    },
+    {
+      "budget_line_item_type": "CONTRACT",
+      line_description: "BLI with date needed",
+      comments: "",
+      can_id: 520,
+      created_by: 503,
+      agreement_id: 6,
+      amount: 4162025.0,
+      status: "PLANNED",
+      date_needed: "2022-04-16T14:03:25.765487",
       on_hold: false,
       certified: false,
       closed: false,
