feat: allow portfolio CAN filter to include BLIs with no date needed (#3746)
* fix(portfolio_cans): ensure budget line items are filtered by year only if date_needed is present

* fix(portfolio_cans): allow budget line items without date_needed to be included in filtering

* fix(agreements): update amounts and statuses for agreement entries in JSON data

* test(portfolio_cans): add test for budget line items with null date_needed

* test: undo bli data edits, create new blis for fix

* test: add new can for testing no date_needed blis

* test(portfolio_cans): update test for bli with null date_needed to use newly created data

* test: fix agreement block for new data

* test: fix BE bli pagination and total amt unittests

* test: fix BE can unittests

* test: fix BE can funding sum unittests

* test: fix bli unittests

* test: update budget line item totals in e2e tests

* test: remove only from budget lines filter test

--- a/backend/data_tools/data/agreements_and_blin_data.json5
+++ b/backend/data_tools/data/agreements_and_blin_data.json5
@@ -16532,8 +16532,61 @@
     "on_hold": false,
     "certified": false,
     "closed": false
-  }
-],
+  },
+    {
+      "budget_line_item_type": "CONTRACT",
+      line_description: "BLI with no date needed #1",
+      comments: "",
+      can_id: 520,
+      created_by: 503,
+      agreement_id: 6,
+      amount: 4162025.1,
+      status: "DRAFT",
+      on_hold: false,
+      certified: false,
+      closed: false,
+    },
+    {
+      "budget_line_item_type": "CONTRACT",
+      line_description: "BLI with no date needed #2",
+      comments: "",
+      can_id: 520,
+      created_by: 503,
+      agreement_id: 6,
+      amount: 4162025.2,
+      status: "DRAFT",
+      on_hold: false,
+      certified: false,
+      closed: false,
+    },
+    {
+      "budget_line_item_type": "CONTRACT",
+      line_description: "BLI with no date needed #3",
+      comments: "",
+      can_id: 520,
+      created_by: 503,
+      agreement_id: 6,
+      amount: 4162025.3,
+      status: "DRAFT",
+      on_hold: false,
+      certified: false,
+      closed: false,
+    },
+    {
+      "budget_line_item_type": "CONTRACT",
+      line_description: "BLI with date needed",
+      comments: "",
+      can_id: 520,
+      created_by: 503,
+      agreement_id: 6,
+      amount: 4162025.0,
+      status: "PLANNED",
+      date_needed: "2022-04-16T14:03:25.765487",
+      on_hold: false,
+      certified: false,
+      closed: false,
+    }
+  ],
   direct_obligation_budget_line_item: [
     {
       "budget_line_item_type": "DIRECT_OBLIGATION",
@@ -16758,6 +16811,6 @@
       on_hold: false,
       certified: false,
       closed: false,
-    },
+    }
   ],
 }
