--- a/backend/data_tools/data/can_data.json5
+++ b/backend/data_tools/data/can_data.json5
@@ -750,6 +750,12 @@
       fiscal_year: 2025,
       can_id: 526,
       funding: 60110000.06,
+    },
+    {
+      // 28
+      fiscal_year: 2025,
+      can_id: 524,
+      funding: 3000000.0,
     }
   ],
   can_history: [
