--- a/backend/data_tools/data/user_data.json5
+++ b/backend/data_tools/data/user_data.json5
@@ -42,8 +42,8 @@
     },
     {
       id: 9,
-      name: "Division of Data Governance",
-      abbreviation: "DDG",
+      name: "Office of the Chief Data Officer (OCDO)",
+      abbreviation: "OCDO",
     }
   ],
   role: [
