--- a/frontend/Dockerfile.azure
+++ b/frontend/Dockerfile.azure
@@ -1,7 +1,8 @@
 # ---- Build Stage ----
 # alpine
 FROM oven/bun@sha256:359bd5872a371d8e08606ac135f17167ba71118b00f6a08308a7a3a9852d7576 as build
-RUN apt-get update && apt-get -y install unzip=latest --no-install-recommends && apt-get clean && rm -rf /var/lib/apt/lists/*
+# hadolint ignore=DL3008
+RUN apt-get update && apt-get -y install unzip --no-install-recommends && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /home/bun/app
 
