--- a/.github/workflows/e2e_test_reusable.yml
+++ b/.github/workflows/e2e_test_reusable.yml
@@ -88,6 +88,6 @@ jobs:
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         with:
           # Set the path to the log file
-          path: full-stack-logs-${{ steps.get-filename.outputs.TEST_FILE }}.log
+          path: full-stack-logs-${{ steps.get-filename.outputs.TEST_FILE }}
           # Optionally, set a name for the artifact
-          name: full-stack-logs-${{ steps.get-filename.outputs.TEST_FILE }}
+          name: full-stack-logs-${{ github.run_id }}-${{ github.sha }}-${{ steps.get-filename.outputs.TEST_FILE }}.log
