chore: update CODEOWNERS to include additional team members

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,2 @@
-@HHS/opre-ops-admin-team
+# In .github/CODEOWNERS or CODEOWNERS file in root
+* @johndeange @rajohnson90 @fpigeonjr @maiyerlee @Santi-3rd @weimiao67
