--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -12,6 +12,8 @@ http {
     sendfile                    on;
     access_log                  /dev/stdout;
     keepalive_timeout           3000;
+    server_tokens               off;
+    more_clear_headers          Server;
     server {
         listen                  3000;
         root                    /home/ops/app;
