fix: enables budget team role to delete SCs as needed

--- a/backend/data_tools/data/user_data.json5
+++ b/backend/data_tools/data/user_data.json5
@@ -253,6 +253,7 @@
         "PUT_SERVICES_COMPONENT",
         "PATCH_SERVICES_COMPONENT",
         "POST_SERVICES_COMPONENT",
+        "DELETE_SERVICES_COMPONENT",
 
         "GET_BLI_PACKAGE",
         "PUT_BLI_PACKAGE",
