build: pin marshmallow to a certain version and prevent future upgrades for now

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -41,11 +41,12 @@
     },
     "packageRules": [
         {
-            "matchPackageNames": ["python"],
+            "matchPackageNames": ["python", "marshmallow"],
             "enabled": false
         },
         {
             "matchPackageNames": [
+                "marshmallow",
                 "python"
             ],
             "enabled": false,
