fix: add procurement shop fee ID to agreements and update budget line items schema

--- a/backend/data_tools/data/agreements_and_blin_data.json5
+++ b/backend/data_tools/data/agreements_and_blin_data.json5
@@ -427,6 +427,7 @@
       status: "OBLIGATED",
       date_needed: "2043-06-13T14:03:25.765487",
       proc_shop_fee_percentage: 0.048,
+      procurement_shop_fee_id: 1,
       services_component_id: 4,
       on_hold: false,
       certified: false,
@@ -442,6 +443,7 @@
       status: "OBLIGATED",
       date_needed: "2043-06-13T14:03:25.765487",
       proc_shop_fee_percentage: 0.048,
+      procurement_shop_fee_id: 2,
       services_component_id: 5,
       on_hold: false,
       certified: false,
@@ -515,6 +517,7 @@
       status: "OBLIGATED",
       date_needed: "2044-06-13T14:03:25.765487",
       proc_shop_fee_percentage: 0.005,
+      procurement_shop_fee_id: 3,
       on_hold: false,
       certified: false,
       closed: false,
@@ -16817,6 +16820,7 @@
       agreement_id: 2,
       amount: 3000000.0,
       status: "OBLIGATED",
+      procurement_shop_fee_id: 4,
       date_needed: "2043-06-13T14:03:25.765487",
       on_hold: false,
       certified: false,
