feat: enhance ESLint configuration and add Prettier support for JavaScript

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,8 @@
       "database": "postgres",
       "username": "ops"
     }
-  ]
+  ],
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  }
 }
