test: added e2e tests for dd and team leader crud workflows

--- a/backend/data_tools/data/user_data.json5
+++ b/backend/data_tools/data/user_data.json5
@@ -542,7 +542,7 @@
       division: 4,
       email: "dave.director@email.com",
       oidc_id: "00000000-0000-1111-a111-000000000020",
-      roles: [{"tablename":  "role", "id": 3}],
+      roles: [{"tablename":  "role", "id": 3}, {"tablename":  "role", "id": 2}],
       status: "ACTIVE"
     },
     { // 523
