feat: add overcome by events status to budgetlineItemstatus enum and update related logic

--- a/backend/data_tools/data/agreements_and_blin_data.json5
+++ b/backend/data_tools/data/agreements_and_blin_data.json5
@@ -500,7 +500,7 @@
       created_by: 503,
       agreement_id: 2,
       amount: 1000000.0,
-      status: "PLANNED",
+      status: "OVERCOME_BY_EVENTS",
       date_needed: "2044-06-13T14:03:25.765487",
       proc_shop_fee_percentage: 0.005,
       on_hold: false,
@@ -576,7 +576,7 @@
     "created_by": 503,
     "agreement_id": 1,
     "amount": "5585724.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-02-16T12:33:00.000000",
     "proc_shop_fee_percentage": "0.031",
     "services_component_id": null,
@@ -592,7 +592,7 @@
     "created_by": 503,
     "agreement_id": 1,
     "amount": "5907323.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-07-16T12:07:00.000000",
     "proc_shop_fee_percentage": "0.004",
     "services_component_id": 1,
@@ -656,7 +656,7 @@
     "created_by": 520,
     "agreement_id": 1,
     "amount": "921547.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-10-23T15:58:00.000000",
     "proc_shop_fee_percentage": "0.022",
     "services_component_id": null,
@@ -720,7 +720,7 @@
     "created_by": 511,
     "agreement_id": 1,
     "amount": "2969349.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2044-10-23T14:52:00.000000",
     "proc_shop_fee_percentage": "0.010",
     "services_component_id": 2,
@@ -736,7 +736,7 @@
     "created_by": 522,
     "agreement_id": 1,
     "amount": "7105510.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-07-16T09:19:00.000000",
     "proc_shop_fee_percentage": "0.015",
     "services_component_id": 4,
@@ -800,7 +800,7 @@
     "created_by": 503,
     "agreement_id": 1,
     "amount": "8803142.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-11-27T12:55:00.000000",
     "proc_shop_fee_percentage": "0.023",
     "services_component_id": null,
@@ -816,7 +816,7 @@
     "created_by": 522,
     "agreement_id": 1,
     "amount": "6326180.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-08-28T12:01:00.000000",
     "proc_shop_fee_percentage": "0.016",
     "services_component_id": 6,
@@ -848,7 +848,7 @@
     "created_by": 500,
     "agreement_id": 1,
     "amount": "3197615.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-07-06T08:41:00.000000",
     "proc_shop_fee_percentage": "0.049",
     "services_component_id": null,
@@ -912,7 +912,7 @@
     "created_by": 503,
     "agreement_id": 1,
     "amount": "223209.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-02-13T11:50:00.000000",
     "proc_shop_fee_percentage": "0.020",
     "services_component_id": 4,
@@ -976,7 +976,7 @@
     "created_by": 520,
     "agreement_id": 1,
     "amount": "296907.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-02-15T13:32:00.000000",
     "proc_shop_fee_percentage": "0.013",
     "services_component_id": 8,
@@ -992,7 +992,7 @@
     "created_by": 520,
     "agreement_id": 1,
     "amount": "5420817.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2044-07-22T12:09:00.000000",
     "proc_shop_fee_percentage": "0.019",
     "services_component_id": 7,
@@ -1008,7 +1008,7 @@
     "created_by": 503,
     "agreement_id": 1,
     "amount": "1402111.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-12-26T14:04:00.000000",
     "proc_shop_fee_percentage": "0.014",
     "services_component_id": 2,
@@ -1040,7 +1040,7 @@
     "created_by": 511,
     "agreement_id": 1,
     "amount": "8255963.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-01-27T11:53:00.000000",
     "proc_shop_fee_percentage": "0.001",
     "services_component_id": 6,
@@ -1088,7 +1088,7 @@
     "created_by": 511,
     "agreement_id": 1,
     "amount": "268244.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-05-13T10:31:00.000000",
     "proc_shop_fee_percentage": "0.034",
     "services_component_id": 4,
@@ -1104,7 +1104,7 @@
     "created_by": 500,
     "agreement_id": 1,
     "amount": "3162531.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-02-05T12:18:00.000000",
     "proc_shop_fee_percentage": "0.028",
     "services_component_id": 6,
@@ -1120,7 +1120,7 @@
     "created_by": 511,
     "agreement_id": 1,
     "amount": "8576193.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-03-03T15:30:00.000000",
     "proc_shop_fee_percentage": "0.006",
     "services_component_id": 5,
@@ -1184,7 +1184,7 @@
     "created_by": 503,
     "agreement_id": 1,
     "amount": "2727143.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-01-21T14:36:00.000000",
     "proc_shop_fee_percentage": "0.033",
     "services_component_id": 2,
@@ -1200,7 +1200,7 @@
     "created_by": 511,
     "agreement_id": 1,
     "amount": "5810090.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-04-10T10:30:00.000000",
     "proc_shop_fee_percentage": "0.009",
     "services_component_id": 3,
@@ -1264,7 +1264,7 @@
     "created_by": 503,
     "agreement_id": 1,
     "amount": "2292202.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-10-08T10:54:00.000000",
     "proc_shop_fee_percentage": "0.025",
     "services_component_id": 4,
@@ -1280,7 +1280,7 @@
     "created_by": 511,
     "agreement_id": 1,
     "amount": "2556533.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-03-02T09:33:00.000000",
     "proc_shop_fee_percentage": "0.040",
     "services_component_id": 2,
@@ -1296,7 +1296,7 @@
     "created_by": 520,
     "agreement_id": 1,
     "amount": "4119655.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-10-16T13:39:00.000000",
     "proc_shop_fee_percentage": "0.043",
     "services_component_id": 1,
@@ -1376,7 +1376,7 @@
     "created_by": 522,
     "agreement_id": 1,
     "amount": "7790739.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-06-14T11:47:00.000000",
     "proc_shop_fee_percentage": "0.033",
     "services_component_id": 6,
@@ -1392,7 +1392,7 @@
     "created_by": 503,
     "agreement_id": 1,
     "amount": "6943601.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-12-08T15:32:00.000000",
     "proc_shop_fee_percentage": "0.012",
     "services_component_id": 2,
@@ -1424,7 +1424,7 @@
     "created_by": 511,
     "agreement_id": 1,
     "amount": "2551350.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-05-27T15:11:00.000000",
     "proc_shop_fee_percentage": "0.040",
     "services_component_id": 1,
@@ -1472,7 +1472,7 @@
     "created_by": 520,
     "agreement_id": 1,
     "amount": "7481322.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2044-02-23T08:12:00.000000",
     "proc_shop_fee_percentage": "0.037",
     "services_component_id": 3,
@@ -1552,7 +1552,7 @@
     "created_by": 503,
     "agreement_id": 1,
     "amount": "2722042.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2044-12-02T13:22:00.000000",
     "proc_shop_fee_percentage": "0.014",
     "services_component_id": 6,
@@ -1648,7 +1648,7 @@
     "created_by": 503,
     "agreement_id": 1,
     "amount": "6201518.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-10-01T11:01:00.000000",
     "proc_shop_fee_percentage": "0.026",
     "services_component_id": 6,
@@ -1840,7 +1840,7 @@
     "created_by": 511,
     "agreement_id": 1,
     "amount": "994347.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-01-14T12:49:00.000000",
     "proc_shop_fee_percentage": "0.030",
     "services_component_id": 2,
@@ -1952,7 +1952,7 @@
     "created_by": 520,
     "agreement_id": 1,
     "amount": "3171638.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2044-08-25T11:54:00.000000",
     "proc_shop_fee_percentage": "0.040",
     "services_component_id": 3,
@@ -1968,7 +1968,7 @@
     "created_by": 511,
     "agreement_id": 1,
     "amount": "1142612.00",
-    "status": "PLANNED",
+    "status": "OVERCOME_BY_EVENTS",
     "date_needed": "2043-08-06T11:41:00.000000",
     "proc_shop_fee_percentage": "0.031",
     "services_component_id": 8,
