--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -17,7 +17,14 @@
         "skipLibCheck": true,
         "strict": true,
         "target": "ESNext",
-        "types": ["vite/client", "vite-plugin-svgr/client", "vite-plugin-babel-macros", "vitest/globals"]
+        "types": ["vite/client", "vite-plugin-svgr/client", "vite-plugin-babel-macros", "vitest/globals", "@testing-library/jest-dom"]
     },
+    "include": [
+        "src/**/*",
+        "**/*.test.js",
+        "**/*.test.jsx",
+        "**/*.spec.js",
+        "**/*.spec.jsx"
+    ],
     "display": "Recommended"
 }
