--- a/backend/data_tools/data/ops_event.json5
+++ b/backend/data_tools/data/ops_event.json5
@@ -2143,7 +2143,7 @@
       event_status: "SUCCESS",
       event_details: {
         can_updates: {
-          can_id: 500,
+          owner_id: 500,
           changes: {
             description: {
               new_value: "CAN Description updated",
@@ -2180,7 +2180,7 @@
       event_status: "SUCCESS",
       event_details: {
         can_updates: {
-          can_id: 500,
+          owner_id: 500,
           changes: {
             description: {
               new_value: "Updated can description for test",
@@ -2406,7 +2406,7 @@
         "request.remote_addr": "192.168.127.1",
         "request.remote_user": null,
         funding_budget_updates: {
-          can_id: 500,
+          owner_id: 500,
           changes: {
             budget: {
               new_value: 1140000.0,
@@ -2443,7 +2443,7 @@
         "request.remote_addr": "192.168.127.1",
         "request.remote_user": null,
         funding_received_updates: {
-          can_id: 500,
+          owner_id: 500,
           funding_id: 500,
           changes: {
             funding: {
@@ -2624,7 +2624,7 @@
       event_status: "SUCCESS",
       event_details: {
         can_updates: {
-          can_id: 500,
+          owner_id: 500,
           changes: {
             nick_name: {
               new_value: "HMRF-OPRE",
@@ -2666,7 +2666,7 @@
       event_status: "SUCCESS",
       event_details: {
         can_updates: {
-          can_id: 500,
+          owner_id: 500,
           changes: {
             portfolio_id: {
               new_value: 1,
@@ -2802,7 +2802,7 @@
       event_status: "SUCCESS",
       event_details: {
         can_updates: {
-          can_id: 500,
+          owner_id: 500,
           changes: {
             portfolio_id: {
               new_value: 6,
@@ -2839,7 +2839,7 @@
       event_status: "SUCCESS",
       event_details: {
         can_updates: {
-          can_id: 501,
+          owner_id: 501,
           changes: {
             nick_name: {
               new_value: "IAA-Incoming",
@@ -2876,7 +2876,7 @@
       event_status: "SUCCESS",
       event_details: {
         can_updates: {
-          can_id: 501,
+          owner_id: 501,
           changes: {
             nick_name: {
               new_value: "IA",
